@@ -752,34 +752,9 @@ namespace Taskmaster.Process
 			else
 				app.TryRemove(Constants.ModifyDelay);
 
-			if (Resize.HasValue)
-			{
-				int[] res = app.Get(Constants.Resize)?.IntArray ?? System.Array.Empty<int>();
-				if (res.Length != 4) res = new int[] { 0, 0, 0, 0 };
-
-				if (Bit.IsSet((int)ResizeStrategy, (int)WindowResizeStrategy.Position))
-				{
-					res[0] = Resize.Value.Left;
-					res[1] = Resize.Value.Top;
-				}
-
-				if (Bit.IsSet((int)ResizeStrategy, (int)WindowResizeStrategy.Size))
-				{
-					res[2] = Resize.Value.Width;
-					res[3] = Resize.Value.Height;
-				}
-
-				var resset = app[Constants.Resize];
-				if (!(resset.IntArray?.SequenceEqual(res) ?? false)) resset.IntArray = res;
-
-				var resstrat = app[Constants.ResizeStrategy];
-				if (resstrat.TryInt != (int)ResizeStrategy) resstrat.Int = (int)ResizeStrategy;
-			}
-			else
-			{
-				app.TryRemove(Constants.ResizeStrategy);
-				app.TryRemove(Constants.Resize);
-			}
+			// DEPRECATED / OBSOLETE
+			app.TryRemove("Resize strategy");
+			app.TryRemove("Resize");
 
 			if (VolumeStrategy != Audio.VolumeStrategy.Ignore)
 			{
@@ -1829,186 +1804,11 @@ namespace Taskmaster.Process
 			}
 		}
 
-		public async Task TryResize(ProcessEx info)
-		{
-			System.Diagnostics.Debug.Assert(Resize.HasValue, "Trying to resize when resize is not defined");
-
-			await Task.Delay(0).ConfigureAwait(false); // asyncify
-
-			bool gotCurrentSize = false, sizeChanging = false;
-
-			try
-			{
-				if (ActiveWait.TryGetValue(info.Id, out var oinfo) && oinfo.Resize)
-				{
-					if (DebugResize) Log.Debug("<Resize> Already monitoring " + info);
-					return;
-				}
-
-				var rect = new NativeMethods.Rectangle();
-
-				if (info.Handle.Equals(IntPtr.Zero)) info.Handle = info.Process.MainWindowHandle;
-
-				if (NativeMethods.GetWindowRect(info.Handle, ref rect))
-					gotCurrentSize = true;
-
-				var oldrect = new System.Drawing.Rectangle(rect.Left, rect.Top, rect.Right - rect.Left, rect.Bottom - rect.Top);
-
-				var newsize = new System.Drawing.Rectangle(
-					Resize.Value.Left != 0 ? Resize.Value.Left : oldrect.Left,
-					Resize.Value.Top != 0 ? Resize.Value.Top : oldrect.Top,
-					Resize.Value.Width != 0 ? Resize.Value.Width : oldrect.Width,
-					Resize.Value.Height != 0 ? Resize.Value.Height : oldrect.Height
-					);
-
-				if (!newsize.Equals(oldrect))
-				{
-					sizeChanging = true;
-
-					// TODO: Add option to monitor the app and save the new size so relaunching the app keeps the size.
-
-					Taskmaster.NativeMethods.MoveWindow(info.Handle, newsize.Left, newsize.Top, newsize.Width, newsize.Height, true);
-
-					if (ResizeStrategy != WindowResizeStrategy.Ignore)
-					{
-						Resize = newsize;
-						NeedsSaving = true;
-					}
-				}
-
-				if (DebugResize)
-				{
-					var sbs = new StringBuilder("<Resize> ", 256)
-						.Append(info.Name).Append(" #").Append(info.Id);
-
-					if (!gotCurrentSize)
-					{
-						sbs.Append(" Failed to get current size");
-						if (sizeChanging) sbs.Append(';');
-					}
-					if (sizeChanging)
-					{
-						sbs.Append(" Changing");
-						if (gotCurrentSize) sbs.Append(" from ").Append(oldrect.Width).Append('×').Append(oldrect.Height);
-						sbs.Append(" to ").Append(newsize.Width).Append('×').Append(newsize.Height);
-					}
-
-					if (ResizeStrategy == WindowResizeStrategy.Ignore)
-						sbs.Append("; remembering size or pos not enabled.");
-					Log.Debug(sbs.ToString());
-				}
-
-				if (ResizeStrategy == WindowResizeStrategy.Ignore) return;
-
-				info.Resize = true;
-				ActiveWait.TryAdd(info.Id, info);
-
-				var re = new System.Threading.ManualResetEvent(false);
-				MonitorWindowResize(info, rect, re).ConfigureAwait(false);
-
-				if (!WaitForExit(info))
-				{
-					info.Process.Exited += (_, _ea) => ProcessEndResize(info, oldrect, re);
-					info.HookExit();
-
-					// TODO: ??? forgot to fill this in
-
-					info.Process.Refresh();
-					if (info.Process.HasExited && info.Resize)
-					{
-						info.State = HandlingState.Exited;
-						ProcessEndResize(info, oldrect, re);
-					}
-				}
-			}
-			catch (OutOfMemoryException) { throw; }
-			catch (Exception ex)
-			{
-				if (DebugResize) Log.Debug("<Resize> Attempt failed for " + info);
-
-				Logging.Stacktrace(ex);
-				info.Resize = false;
-			}
-		}
-
-		async Task MonitorWindowResize(ProcessEx info, NativeMethods.Rectangle rect, System.Threading.ManualResetEvent re)
-		{
-			await Task.Delay(0).ConfigureAwait(false);
-
-			if (DebugResize) Log.Debug("<Resize> Starting monitoring " + info);
-			try
-			{
-				while (!re.WaitOne(60_000))
-				{
-					if (DebugResize) Log.Debug("<Resize> Recording size and position for " + info);
-
-					NativeMethods.GetWindowRect(info.Handle, ref rect);
-
-					bool rpos = Bit.IsSet((int)ResizeStrategy, (int)WindowResizeStrategy.Position);
-					bool rsiz = Bit.IsSet((int)ResizeStrategy, (int)WindowResizeStrategy.Size);
-					Resize = new System.Drawing.Rectangle(
-						rpos ? rect.Left : Resize.Value.Left, rpos ? rect.Top : Resize.Value.Top,
-						rsiz ? rect.Right - rect.Left : Resize.Value.Left, rsiz ? rect.Bottom - rect.Top : Resize.Value.Top
-						);
-
-					NeedsSaving = true;
-				}
-			}
-			catch (OutOfMemoryException) { throw; }
-			catch (Exception ex)
-			{
-				Logging.Stacktrace(ex);
-			}
-
-			if (DebugResize) Log.Debug("<Resize> Stopping monitoring " + info);
-		}
-
-		void ProcessEndResize(ProcessEx info, System.Drawing.Rectangle oldrect, System.Threading.ManualResetEvent re)
-		{
-			try
-			{
-				info.Resize = false;
-
-				re.Set();
-				re.Reset();
-
-				if (!ResizeWaitList.TryRemove(info.Id, out _))
-				{
-					//Log.Debug("Process Exit");
-				}
-
-				if ((Bit.IsSet((int)ResizeStrategy, (int)WindowResizeStrategy.Size)
-					&& (oldrect.Width != Resize.Value.Width || oldrect.Height != Resize.Value.Height))
-					|| (Bit.IsSet((int)ResizeStrategy, (int)WindowResizeStrategy.Position)
-					&& (oldrect.Left != Resize.Value.Left || oldrect.Top != Resize.Value.Top)))
-				{
-					if (DebugResize) Log.Debug(info.ToFullFormattedString() + " Saving window size to " + Resize.Value.Width.ToString() + "×" + Resize.Value.Height.ToString());
-
-					NeedsSaving = true;
-				}
-			}
-			catch (OutOfMemoryException) { throw; }
-			catch (Exception ex)
-			{
-				Logging.Stacktrace(ex);
-			}
-			finally
-			{
-				ResizeWaitList.TryRemove(info.Id, out _);
-				re?.Dispose();
-			}
-		}
-
 		public bool NeedsSaving = false;
 
 		public bool ColorReset { get; set; } = false;
 
 		public bool LegacyWorkaround { get; set; } = false;
-
-		public WindowResizeStrategy ResizeStrategy = WindowResizeStrategy.Ignore;
-
-		public System.Drawing.Rectangle? Resize = null;
-		readonly ConcurrentDictionary<int, int> ResizeWaitList = new ConcurrentDictionary<int, int>();
 
 		async Task TouchReapply(ProcessEx info)
 		{
