@@ -3,6 +3,8 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.14...]
+### 2020-05-24
+	Removed: Window resize&reposition feature. Deemed unnecessary for most users and too likely to break things if made into proper feature.
 ### 2020-04-29
 	Fixed: Audio manager under some conditions fails to hook to default devices.
 ### 2020-04-28
